HvD: It helps if you do not let the optimizer get confused by irrelevant numbers.

--- a/src/rdmft/GNUmakefile
+++ b/src/rdmft/GNUmakefile
@@ -27,7 +27,8 @@
          wfn1_print_analysis.o \
          wfn1_print_occ.o \
          wfn1_size.o \
-         wfn1_trace.o
+         wfn1_trace.o \
+         wfn1_zero_vv.o
 
    LIBRARY = librdmft.a
 
