xlf crashes on ccsd_trpdrv_omp_mixprec.F. disabled for now on xlf

--- a/src/ccsd/GNUmakefile
+++ b/src/ccsd/GNUmakefile
@@ -101,6 +101,9 @@ ifdef USE_MIC_TRPDRV
   USES_BLAS    += ccsd_trpdrv_offload.F
   LIB_DEFINES += -DUSE_MIC_TRPDRV
 endif
+ifeq ($(_FC),xlf)
+  LIB_DEFINES += -DTRPMIXP_OFF
+endif
 
  LIBRARY = libccsd.a
 
