HvD: A number of changes: 1. The main change is a fix to the natural orbital Fock matrix    for same spin electrons 2. Added the option to load the guess wavefunction 3. Modified the guess of the correlation functions to allow    for core or virtual orbitals 4. Introduced an error datatype to record the level of    convergence for all Fock matrices

--- a/src/rdmft/GNUmakefile
+++ b/src/rdmft/GNUmakefile
@@ -21,6 +21,7 @@
          wfn1_gen_mat.o \
          wfn1_gen_trial_wfn.o \
          wfn1_guess_corr.o \
+         wfn1_guess_movecs.o \
          wfn1_idmin.o \
          wfn1_insert.o \
          wfn1_lindep.o \
