64-bit alignment makes a huge difference on ga_dgemm performance on KNL

--- a/src/tools/GNUmakefile
+++ b/src/tools/GNUmakefile
@@ -488,6 +488,9 @@ ifdef USE_GPROF
     CXXFLAGS_FORGA+="-pg"
 endif
 
+ifdef USE_KNL
+    MAYBE_OFFLOAD= INTEL_64ALIGN=1
+endif
 ifdef USE_OFFLOAD
     MAYBE_OFFLOAD= INTEL_64ALIGN=1
 endif
