--- a/src/nwpw/nwpwlib/K1dB/GNUmakefile
+++ b/src/nwpw/nwpwlib/K1dB/GNUmakefile
@@ -5,6 +5,19 @@
  OBJ_OPTIMIZE = K1dB.o
  OBJ = 
 
+### make defaults USE_MPIF and USE_MPIF4 ###
+ifeq ($(USE_MPIF),n)
+ USE_MPIF = n
+else
+ USE_MPIF = y
+endif
+ifeq ($(USE_MPIF4),n)
+ USE_MPIF4 = n
+else
+ USE_MPIF4 = y
+endif
+
+
 ifeq ($(USE_MPIF),y)
   OBJ_OPTIMIZE += K1dB-mpi.o
 else
