--- a/src/nwpw/nwpwlib/DMatrix/GNUmakefile
+++ b/src/nwpw/nwpwlib/DMatrix/GNUmakefile
@@ -5,6 +5,19 @@
   OBJ_OPTIMIZE = DMatrix.o
   OBJ = 
 
+### make defaults USE_MPIF and USE_MPIF4 ###
+ifeq ($(USE_MPIF),n)
+ USE_MPIF = n
+else
+ USE_MPIF = y
+endif
+ifeq ($(USE_MPIF4),n)
+ USE_MPIF4 = n
+else
+ USE_MPIF4 = y
+endif
+
+
 ifeq ($(USE_MPIF),y)
   OBJ_OPTIMIZE += DMatrix-mpi.o
 else
