add header dependency for the original location

--- a/src/nwpw/nwpwlib/ion/GNUmakefile
+++ b/src/nwpw/nwpwlib/ion/GNUmakefile
@@ -27,6 +27,7 @@
 
   LIB_DEFINES = 
 
+      HEADERS = ../../nwpwlib/utilities/beom.fh
 
 include ../../../config/makefile.h
 include ../../../config/makelib.h
