changes to -- hopefully -- speedup runs with large no. of roots

--- a/src/nwdft/lr_tddft/GNUmakefile
+++ b/src/nwdft/lr_tddft/GNUmakefile
@@ -11,7 +11,7 @@ OBJ_OPTIMIZE =
 
 LIBRARY = libnwdft.a
 
-USES_BLAS = tddft_diagon.F tddft_transfm.F tddft_analysis.F
+USES_BLAS = tddft_diagon.F tddft_transfm.F tddft_analysis.F tddft_restart.F
 
 LIB_DEFINES = -DDEBUG_PRINT
 #
