--- a/src/rdmft/GNUmakefile
+++ b/src/rdmft/GNUmakefile
@@ -15,6 +15,7 @@
          wfn1_entropy.o \
          wfn1_e_g.o \
          wfn1_e_g_2el.o \
+         wfn1_e_g_2el_s.o \
          wfn1_exp.o \
          wfn1_f0df0f1.o \
          wfn1_f1f2f3.o \
