build ttlg if tce_cuda=y

--- a/src/tce/GNUmakefile
+++ b/src/tce/GNUmakefile
@@ -7,7 +7,7 @@ SUBDIRS = include diis diis2 gradients \
           ccd lccd lccsd qcisd cc3 \
           mbpt1 mbpt2 mbpt3 mbpt4 cis cisd cisdt cisdtq \
           ccsd_act eomccsd_act cr_eomccsd_t_act \
-	    sort ttlg
+	      sort
           #response ccsd_yr ccsd_alpha ccsd_beta \
 
 ifdef EACCSD
@@ -55,6 +55,7 @@ endif
 
 ifdef TCE_CUDA
       LIB_DEFINES += -DTCE_CUDA
+      SUBDIRS += ttlg
 endif
 ifdef USE_PSTAT
       LIB_DEFINES += -DUSE_PSTAT
