--- a/src/tce/ttlg/GNUmakefile
+++ b/src/tce/ttlg/GNUmakefile
@@ -1,17 +1,20 @@
 
 
-ifdef TCE_CUDA # not really needed, but keep the guard for now.
- LIB_INCLUDES = -I./includes $(CUDA_INCLUDE)
- OBJ_OPTIMIZE += fvimatchl32.o fvimatchg32_blocking.o \
-	fvimatchg32.o      fvinomatchgeneral.o fvigeneralolap.o 
+#ifdef TCE_CUDA # not really needed, but keep the guard for now.
+ OBJ_OPTIMIZE = fvimatchl32.o fvimatchg32_blocking.o \
+	fvimatchg32.o      fvinomatchgeneral.o fvigeneralolap.o \
 	BlockingCase.o  main.o  Parameters.o  ParameterTuner.o  TransposeSpec.o model.o
- LIB_DEFINES += $(CUDA_INCLUDE)
 
+ #LIB_DEFINES = -I./includes $(CUDA_INCLUDE)
+
+ LIB_INCLUDES = -I./includes $(CUDA_INCLUDE)
+
+ #CUDA_FLAGS = -I./includes $(CUDA_INCLUDE)
 
 LIBRARY = libtce.a
 
-ARCH =  -arch=sm_35 
-FOPTIONS += -O3 -Xcompiler -fPIC -std=c++11 $(IFLAGS)  $(CFLAGS) -DNOHTIME -Xptxas --warn-on-spills   $(ARCH)
+#ARCH =  -arch=sm_35 
+#CUDA_FLAGS += -O3 -Xcompiler -fPIC -std=c++11 -DNOHTIME -Xptxas --warn-on-spills $(ARCH)
 
 USES_BLAS = 
 
@@ -20,4 +23,4 @@ HEADERS =
 include ../../config/makefile.h
 include ../../config/makelib.h
 
-endif
+#endif
