add threadsafe_ga_wrappers to build

--- a/src/tce/GNUmakefile
+++ b/src/tce/GNUmakefile
@@ -119,6 +119,11 @@ OBJ_OPTIMIZE = tce_tile.o tce_ao1e.o tce_mo1e.o tce_ao2e.o \
 
 OBJ_OPTIMIZE += tce_mo2e_zones_4a_disk_ga_N5.o tce_mo2e_zones_4a_disk_ga_chop_N5.o
 
+ifdef USE_OPENMP_TASKS
+    OBJ_OPTIMIZE += threadsafe_ga_wrappers.o
+    #LIB_DEFINES += -DTCE_TIME_COMMS
+endif
+
 ifeq ($(NWCHEM_TARGET),$(findstring $(NWCHEM_TARGET),LAPI64 IBM64))
       #OBJ += tce_eom_xguess_karol.o tce_eom_yguess_karol.o
       OBJ += tce_eom_xguess.o tce_eom_yguess.o
