use nonblocking broadcast (optional)
- active with USE_NONBLOCKING_BCAST=1 in your build environment.
- this requires MPI-3, which is automatically verified.
- firing up >1 nonblocking broadcasts should be advantageous
  when they are huge messages, but this is unconfirmed.
  ibcast+wait should never be slower than bcast unless the folks
  implementing MPI are completely terrible at their jobs.

--- a/src/util/GNUmakefile
+++ b/src/util/GNUmakefile
@@ -306,6 +306,9 @@ endif
 ifdef USE_FORTRAN2003
   LIB_DEFINES += -DUSE_FORTRAN2003
 endif
+ifdef USE_NONBLOCKING_BCAST
+  LIB_DEFINES += -DUSE_IBCAST
+endif
 
 include ../config/makelib.h
 
