initial Simint interface, just for cartesian 2e4c. Requires USE_SIMINT, SIMINT_LIB and SIMINT_INCLUDE. Example: SIMINT_LIB="-L/home/edo/apps/simint8.install/lib -lsimint" SIMINT_INCLUDE=-I/home/edo/apps/simint8.install/include/simint"

--- a/src/NWints/api/GNUmakefile
+++ b/src/NWints/api/GNUmakefile
@@ -4,6 +4,9 @@
 ifeq ($(USE_TEXAS),YEP)
       LIB_DEFINES = -DUSE_TEXAS
 endif
+ifdef USE_SIMINT
+      LIB_DEFINES += -DUSE_SIMINT
+endif
 
     OBJ = cando_sp.o     exact_mem.o    exactd_mem.o \
           int_1cg.o      int_1e3ov.o    int_1estv.o \
