--- a/src/nwdft/scf_dft/GNUmakefile
+++ b/src/nwdft/scf_dft/GNUmakefile
@@ -39,6 +39,7 @@
 	dft_dump_info.o \
 	dft_fant.o\
 	dft_printinfo.o\
+	dft_fock_efield.o\
 	dft_frac_mo.o  dft_nwmolden.o
 
      LIBRARY = libnwdft.a
