--- a/src/tools/GNUmakefile
+++ b/src/tools/GNUmakefile
@@ -552,11 +552,13 @@ ifdef CXXFLAGS_FORGA
     MAYBE_CXXFLAGS=CXXFLAGS="$(CXXFLAGS_FORGA)"
 endif
 # End conversion of env vars to configure options
-USE_GAGITHUB=1
+#USE_GAGITHUB=1
+USE_GAGITHUB=
 ifdef USE_GASVN
  USE_GAGITHUB=
 endif
-USE_GA_RELEASE=1
+#USE_GA_RELEASE=1
+USE_GA_RELEASE=
 ifdef GA_BRANCH
  USE_GA_RELEASE=
 endif
