Undid some local changes to gatools makefile that were not intended for upstream

--- a/src/tools/GNUmakefile
+++ b/src/tools/GNUmakefile
@@ -552,13 +552,11 @@ ifdef CXXFLAGS_FORGA
     MAYBE_CXXFLAGS=CXXFLAGS="$(CXXFLAGS_FORGA)"
 endif
 # End conversion of env vars to configure options
-#USE_GAGITHUB=1
-USE_GAGITHUB=
+USE_GAGITHUB=1
 ifdef USE_GASVN
  USE_GAGITHUB=
 endif
-#USE_GA_RELEASE=1
-USE_GA_RELEASE=
+USE_GA_RELEASE=1
 ifdef GA_BRANCH
  USE_GA_RELEASE=
 endif
