moved f90 module to its own directory to avoid parallel make breakage

--- a/src/NWints/simint/GNUmakefile
+++ b/src/NWints/simint/GNUmakefile
@@ -2,27 +2,9 @@
 
 include ../../config/makefile.h
 
-  OBJ_OPTIMIZE = nwcsim_facef90.o nwcsim_hf2.o
-ifdef USE_SIMINT
-      LIB_DEFINES += -I$(SIMINT_HOME)/include/simint -DUSE_SIMINT
-      OBJ_OPTIMIZE += nwcsimint_test.o
-endif
+    SUBDIRS = module source
 
-ifdef SIMINT_GRADIENT
-      LIB_DEFINES +=  -DSIMINT_GRADIENT
-endif
-
-        
-       HEADERS = 
-
-       LIBRARY = libnwints.a
-
-     USES_BLAS = 
 
 include ../../config/makelib.h
 
-#  ifeq ($(FC),efc)
-#            FOPTIONS += -save
-#           FOPTIMIZE += -O0 -g
-#  endif
 
