--- a/.travis.yml
+++ b/.travis.yml
@@ -28,9 +28,10 @@ env: == default ==
         BLAS_SIZE=4
 
 before_script:
-
-script:
         cd $NWCHEM_TOP/src &&
-        make nwchem_config &&
-        make ;
+        make nwchem_config && 
+        make 64_to_32 &
+        sleep 1
+script:
+        make -j 3
 
