--- a/.travis.yml
+++ b/.travis.yml
@@ -5,21 +5,8 @@ compiler:
   - gcc
 addons:
   apt:
+  - dist: xenial
     packages:
-    - gfortran
-    - gcc
-    - python-dev
-    - libopenblas-dev
-    - libopenmpi-dev
-    - openmpi-bin
-    - tcsh
-    - make 
-    - automake 
-    - libtool 
-    - autoconf
-    - perl
-    - libscalapack-openmpi1
-    - libscalapack-mpi-dev
 matrix:
   include:
       env: == default ==
@@ -37,6 +24,12 @@ matrix:
         PYTHONHOME=/usr
 
 before_script:
+        - sudo apt-get -qq update
+        - sudo apt-get -qq upgrade
+        - sudo apt-get -y install gfortran gcc python-dev libopenblas-dev \
+        libopenmpi-dev openmpi-bin tcsh make automake libtool autoconf \
+        perl \ 
+        libscalapack-openmpi1 libscalapack-mpi-dev
         cd $NWCHEM_TOP/src &&
         make nwchem_config && 
         make 64_to_32 >& 6log &
