--- a/.travis.yml
+++ b/.travis.yml
@@ -26,10 +26,10 @@ matrix:
 before_script:
         - sudo apt-get -qq update
         - sudo apt-get -qq upgrade
-        - sudo apt-get -y install gfortran gcc python-dev libopenblas-dev \
-        libopenmpi-dev openmpi-bin tcsh make automake libtool autoconf \
-        perl \ 
-        libscalapack-openmpi1 libscalapack-mpi-dev
+        - sudo apt-get -y install gfortran gcc python-dev libopenblas-dev 
+        - sudo apt-get -y install libopenmpi-dev openmpi-bin tcsh make automake libtool autoconf 
+        - sudo apt-get -y install perl
+        - sudo apt-get -y install libscalapack-openmpi1 libscalapack-mpi-dev
         cd $NWCHEM_TOP/src &&
         make nwchem_config && 
         make 64_to_32 >& 6log &
