--- a/.travis.yml
+++ b/.travis.yml
@@ -2,40 +2,42 @@ language: c
 matrix:
   include:
   - os: linux
-    dist: xenial
+    dist: trusty
     sudo: required
 compiler:
   - gcc
 env: == default ==
-        NWCHEM_TOP=$TRAVIS_BUILD_DIR
+        NWCHEM_TOP=$TRAVIS_BUILD_DIR/../nwchem-6.8
         NWCHEM_TARGET=LINUX64
-        NWCHEM_MODULES="nwdft driver stepper mp2_grad python"
+        NWCHEM_MODULES="all python"
         USE_MPI=y
         USE_64TO32=y
         BLASOPT="-lopenblas -lpthread -lrt"
         BLAS_SIZE=4
-        SCALAPACK="-lopenblas -lpthread -lrt"
+        SCALAPACK="-L$TRAVIS_BUILD_DIR/lib  -lscalapack -lopenblas -lpthread -lrt"
         SCALAPACK_SIZE=4
         USE_PYTHONCONFIG=y
         PYTHONVERSION=2.7
         PYTHONHOME=/usr
-
 before_script:
-        - sudo apt-get -y install gfortran gcc python-dev libopenblas-dev 
+        - sudo apt-get -y install gfortran gcc python-dev  cmake
         - sudo apt-get -y install libopenmpi-dev openmpi-bin tcsh make automake libtool autoconf 
         - sudo apt-get -y install perl
-        - sudo apt-get -y install libscalapack-openmpi1 libscalapack-mpi-dev
+        - cd $TRAVIS_BUILD_DIR && pwd && cd ..; ln -sf nwchem nwchem-6.8 && cd $NWCHEM_TOP && pwd
+        - ls -lrt $TRAVIS_BUILD_DIR
+        - ls -lrt $NWCHEM_TOP
         - cd $NWCHEM_TOP/src && make nwchem_config &&  make 64_to_32 >& 6log &
+        - cd $TRAVIS_BUILD_DIR && git clone https://github.com/xianyi/OpenBLAS.git&& cd OpenBLAS && make -j3 PREFIX=$TRAVIS_BUILD_DIR NO_CBLAS=1 NO_LAPACKE=1 NUM_THREADS=1 all >& openblas.log && make PREFIX=$TRAVIS_BUILD_DIR install && tail -4 openblas.log
+        - cd $TRAVIS_BUILD_DIR ;git clone https://github.com/scibuilder/scalapack.git && mkdir -p scalapack/build && cd scalapack/build && cmake ../ -DCMAKE_BUILD_TYPE=MinSizeRel -DBUILD_TESTING=OFF -DBUILD_SHARED_LIBS=ON  -DBLAS_blas_LIBRARY="-L$TRAVIS_BUILD_DIR/lib -lopenblas" -DLAPACK_lapack_LIBRARY="-L$TRAVIS_BUILD_DIR/lib -lopenblas"  -DCMAKE_INSTALL_PREFIX=$TRAVIS_BUILD_DIR  && make V=0 -j3 >& scalap.log &&  make install && tail -20 scalap.log &&ls -lrt $TRAVIS_BUILD_DIR/lib 
         - sleep 1
 script:
-        - cd $NWCHEM_TOP/src && make -j 3 >& make.log
-        - tail -100 $NWCHEM_TOP/src/6log
-        - tail -100 $NWCHEM_TOP/src/tools/build/config.log
-        - tail -200 $NWCHEM_TOP/src/make.log
-        - grep SCALAPAC $NWCHEM_TOP/src/tools/build/config.log
+        - cd $NWCHEM_TOP/src && travis_wait 30 make -j 4
+        - tail -2 $NWCHEM_TOP/src/6log
+        - tail -2 $NWCHEM_TOP/src/tools/build/config.log
+        - cat $NWCHEM_TOP/src/tools/build/config.h
+        - tail -10 $NWCHEM_TOP/src/make.log
 after_failure:
-        - cat $NWCHEM_TOP/src/6log
-        - cat $NWCHEM_TOP/src/tools/build/config.log
-        - cat $NWCHEM_TOP/src/tools/build/comex/config.log
-        - cat $NWCHEM_TOP/src/make.log
-
+        - tail -20 $NWCHEM_TOP/src/tools/build/config.log
+        - tail -10 $NWCHEM_TOP/src/tools/build/comex/config.log
+        - tail -200 $NWCHEM_TOP/src/make.log
+              
