--- a/.travis.yml
+++ b/.travis.yml
@@ -27,11 +27,11 @@ before_script:
         - ls -lrt $TRAVIS_BUILD_DIR
         - ls -lrt $NWCHEM_TOP
         - cd $NWCHEM_TOP/src && make nwchem_config &&  make 64_to_32 >& 6log &
-        - cd $TRAVIS_BUILD_DIR && git clone https://github.com/xianyi/OpenBLAS.git&& cd OpenBLAS && make -j3 PREFIX=$TRAVIS_BUILD_DIR NO_CBLAS=1 NO_LAPACKE=1 NUM_THREADS=1 all >& openblas.log && make PREFIX=$TRAVIS_BUILD_DIR install && tail -4 openblas.log
-        - cd $TRAVIS_BUILD_DIR ;git clone https://github.com/scibuilder/scalapack.git && mkdir -p scalapack/build && cd scalapack/build && cmake ../ -DCMAKE_BUILD_TYPE=MinSizeRel -DBUILD_TESTING=OFF -DBUILD_SHARED_LIBS=ON  -DBLAS_blas_LIBRARY="-L$TRAVIS_BUILD_DIR/lib -lopenblas" -DLAPACK_lapack_LIBRARY="-L$TRAVIS_BUILD_DIR/lib -lopenblas"  -DCMAKE_INSTALL_PREFIX=$TRAVIS_BUILD_DIR  && make V=0 -j3 >& scalap.log &&  make install && tail -20 scalap.log &&ls -lrt $TRAVIS_BUILD_DIR/lib 
+        - cd $TRAVIS_BUILD_DIR && git clone https://github.com/xianyi/OpenBLAS.git&& cd OpenBLAS && make -j3 PREFIX=$TRAVIS_BUILD_DIR NO_CBLAS=1 NO_LAPACKE=1 DEBUG=1 NUM_THREADS=1 all >& openblas.log && make PREFIX=$TRAVIS_BUILD_DIR install && tail -4 openblas.log
+        - cd $TRAVIS_BUILD_DIR ;git clone https://github.com/scibuilder/scalapack.git && mkdir -p scalapack/build && cd scalapack/build && cmake ../ -DCMAKE_BUILD_TYPE=RelWithDebInfo -DTEST_SCALAPACK=OFF -DBUILD_TESTING=OFF -DBUILD_SHARED_LIBS=ON  -DBLAS_blas_LIBRARY="-L$TRAVIS_BUILD_DIR/lib -lopenblas" -DLAPACK_lapack_LIBRARY="-L$TRAVIS_BUILD_DIR/lib -lopenblas"  -DCMAKE_INSTALL_PREFIX=$TRAVIS_BUILD_DIR  && make V=0 -j3 >& scalap.log &&  make install && tail -20 scalap.log &&ls -lrt $TRAVIS_BUILD_DIR/lib 
         - sleep 1
 script:
-        - cd $NWCHEM_TOP/src &&  travis_wait make FDEBUG="-O0 -g" FOPTIMIZE="-O2 -g" -j3 >& make.log
+        - cd $NWCHEM_TOP/src && make FDEBUG="-O0 -g" FOPTIMIZE="-O2 -g" -j3 >& make.log
         - tail -2 $NWCHEM_TOP/src/6log
         - tail -2 $NWCHEM_TOP/src/tools/build/config.log
         - cat $NWCHEM_TOP/src/tools/build/config.h
