--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ compiler:
 env: == default ==
         NWCHEM_TOP=$TRAVIS_BUILD_DIR/../nwchem-6.8
         NWCHEM_TARGET=LINUX64
-        NWCHEM_MODULES="nwdft driver stepper"
+        NWCHEM_MODULES="nwdft driver stepper property hessian vib mp2_grad ccsd"
         USE_MPI=y
         USE_64TO32=y
         BLASOPT="-L$TRAVIS_BUILD_DIR/lib -lopenblas -lpthread -lrt"
@@ -28,7 +28,7 @@ before_script:
         - ls -lrt $NWCHEM_TOP
         - cd $NWCHEM_TOP/src && make nwchem_config &&  make 64_to_32 >& 6log &
         - ./travis/build_openblas.sh
-        - cd $TRAVIS_BUILD_DIR ;git clone https://github.com/scibuilder/scalapack.git && mkdir -p scalapack/build && cd scalapack/build && cmake ../ -DCMAKE_BUILD_TYPE=RelWithDebInfo -DTEST_SCALAPACK=OFF -DBUILD_TESTING=OFF -DBUILD_SHARED_LIBS=ON  -DBLAS_blas_LIBRARY="-L$TRAVIS_BUILD_DIR/lib -lopenblas" -DLAPACK_lapack_LIBRARY="-L$TRAVIS_BUILD_DIR/lib -lopenblas"  -DCMAKE_INSTALL_PREFIX=$TRAVIS_BUILD_DIR  && make V=0 -j3 >& scalap.log &&  make install && tail -20 scalap.log &&ls -lrt $TRAVIS_BUILD_DIR/lib 
+        - ./travis/build_scalapack.sh
         - sleep 1
 script:
         - cd $NWCHEM_TOP/src && make FDEBUG="-O0 -g" FOPTIMIZE="-O2 -g" -j3 >& make.log
