--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,8 @@ script:
         - tail -2 $NWCHEM_TOP/src/tools/build/config.log
         - cat $NWCHEM_TOP/src/tools/build/config.h
         - tail -10 $NWCHEM_TOP/src/make.log
+        - cd $NWCHEM_TOP/src && make nwchem_config NWCHEM_MODULES="nwdft driver stepper property hessian vib mp2_grad ccsd tce" && make FDEBUG="-O0 -g" FOPTIMIZE="-O1 -g" -j3 >& make.log
+        - tail -10 $NWCHEM_TOP/src/make.log
 after_failure:
         - tail -20 $NWCHEM_TOP/src/tools/build/config.log
         - tail -10 $NWCHEM_TOP/src/tools/build/comex/config.log
