--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,10 @@ before_script:
         - ./travis/build_scalapack.sh
         - sleep 1
 script:
+        - cd $NWCHEM_TOP/src/tce && make make 64_to_32 >& 6log &
         - cd $NWCHEM_TOP/src && make FDEBUG="-O0 -g" FOPTIMIZE="-O2 -g" -j3 >& make.log
         - tail -2 $NWCHEM_TOP/src/6log
+        - tail -2 $NWCHEM_TOP/src/tce/6log
         - tail -2 $NWCHEM_TOP/src/tools/build/config.log
         - cat $NWCHEM_TOP/src/tools/build/config.h
         - tail -10 $NWCHEM_TOP/src/make.log
