64_to_32 takes a loong time in tce

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,10 @@ script:
         - tail -10 $NWCHEM_TOP/src/make.log
         - cd $NWCHEM_TOP/src && make nwchem_config NWCHEM_MODULES="nwdft driver stepper property hessian vib mp2_grad ccsd python tce" 
         - cd $NWCHEM_TOP/src/tce && head -30 dependencies && rm -f dependencies
+        - grep -i dot $NWCHEM_TOP/src/tce/tce_residual_t1.F
+        - make include_stamp dependencies
+        - wait 
+        - grep -i dot $NWCHEM_TOP/src/tce/tce_residual_t1.F
         - cd $NWCHEM_TOP/src/tce && make FDEBUG="-O0 -g" FOPTIMIZE="-O0 -g" -j4 >& ../tcemake.log 
         - cd $NWCHEM_TOP/src && make link
         - tail -10 $NWCHEM_TOP/src/tcemake.log
