--- a/.travis.yml
+++ b/.travis.yml
@@ -45,8 +45,8 @@ script:
         - make include_stamp dependencies
         - wait 
         - grep -i dot $NWCHEM_TOP/src/tce/tce_residual_t1.F
-        - cd $NWCHEM_TOP/src/tce && make FDEBUG="-O0 -g" FOPTIMIZE="-O0 -g" -j4 >& ../tcemake.log 
-        - tail -10 $NWCHEM_TOP/src/tcemake.log
+        - cd $NWCHEM_TOP/src/tce && ../../travil/sleep_loop.sh make FDEBUG="-O0 -g" FOPTIMIZE="-O0 -g" -j4 
+        - tail -4 $NWCHEM_TOP/src/make.log
         - cd $NWCHEM_TOP/src && make link
         - cd $NWCHEM_TOP/QA && ./runtests.mpi.unix procs 2 dft_siosi3
         - cd $NWCHEM_TOP/QA && ./doafewqmtests.mpi 2
@@ -54,9 +54,8 @@ after_failure:
         - tail -20 $NWCHEM_TOP/src/tools/build/config.log
         - tail -10 $NWCHEM_TOP/src/tools/build/comex/config.log
         - grep -A 2 -B 2 -i error $NWCHEM_TOP/src/make.log 
-        - grep -A 2 -B 2 -i error $NWCHEM_TOP/src/tcemake.log 
-        - head -200 $NWCHEM_TOP/src/tcemake.log
-        - tail -200 $NWCHEM_TOP/src/tcemake.log
+        - head -200 $NWCHEM_TOP/src/make.log
+        - tail -200 $NWCHEM_TOP/src/make.log
         - grep d= $NWCHEM_TOP/QA/testoutputs/dft_he2+.out
         - grep @ $NWCHEM_TOP/QA/testoutputs/h2o_opt.out
               
