depth=3 for cloning nwchem

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ matrix:
     sudo: required
 compiler:
   - gcc
+git:
+  depth: 3
 env: == default ==
         NWCHEM_TOP=$TRAVIS_BUILD_DIR
         NWCHEM_TARGET=LINUX64
